--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2016-06-20  Qin Wenfeng <mail@qinwenfeng.com>
 
-        * inst/include/Rcpp/exceptions.h: add RCPP_USING_UTF8_ERROR_STRING macro to use UTF-8 encoding exception string in R
+        * inst/include/Rcpp/exceptions.h: add RCPP_USING_UTF8_ERROR_STRING macro
+        to use UTF-8 encoding exception string in R
 
 2016-06-14  Artem Klevtsov <a.a.klevtsov@gmail.com>
 
