expose warning() and warningcall()
Uses Rf_* versions as usual

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-06-23  Dirk Eddelbuettel  <edd@debian.org>
+
+        * inst/include/Rcpp/print.h (Rcpp): Also expose Rf_warning() and
+        Rf_warningcall() with Rcpp namespace (without leading Rf_)
+
 2016-06-20  Qin Wenfeng <mail@qinwenfeng.com>
 
         * inst/include/Rcpp/exceptions.h: add RCPP_USING_UTF8_ERROR_STRING macro
