--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2016-06-23  Dirk Eddelbuettel  <edd@debian.org>
 
+        * DESCRIPTION (Version): Rolling minor version
+
         * inst/include/Rcpp/print.h (Rcpp): Also expose Rf_warning() and
         Rf_warningcall() with Rcpp namespace (without leading Rf_)
 
