--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2016-06-29  Kevin Ushey  <kevinushey@gmail.com>
+
+        * inst/examples/SugarPerformance/sugarBenchmarks.R: remove Rf_eval usages
+        * inst/include/Rcpp/Environment.h: idem
+        * inst/include/Rcpp/Language.h: idem
+        * inst/include/Rcpp/Module.h: idem
+        * inst/include/Rcpp/exceptions.h: idem
+        * inst/include/Rcpp/proxy/FieldProxy.h: idem
+        * inst/include/Rcpp/r_cast.h: idem
+        * inst/unitTests/cpp/language.cpp: idem
+        * src/barrier.cpp: idem
+
 2016-06-23  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION (Version): Rolling minor version
