--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2016-07-17  James J Balamuta  <balamut2@illinois.edu>
+
+        * vignettes/Rcpp-quickref.Rnw: Added sections on Rcpp attributes and
+        plugins. Facelifts on important notes, inline, environments, and 
+        calling R functions.
+        
 2016-07-15  James J Balamuta  <balamut2@illinois.edu>
 
         * vignettes/Rcpp-FAQ.Rnw: Added section on default function parameters
