--- a/vignettes/Rcpp-FAQ.Rnw
+++ b/vignettes/Rcpp-FAQ.Rnw
@@ -607,7 +607,7 @@ But for most packages using \pkg{Rcpp}, only two things are required:
   instantiated, for example \code{importFrom(Rcpp, evalCpp)}.
 \end{itemize}
 
-The name of the symbol does really matter; once one symbol is important all
+The name of the symbol does really matter; once one symbol is imported all
 should be available.
 
 \subsection{I am having problems building RcppArmadillo on OS X, any help ?}
