--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-07-18  Kevin Ushey  <kevin@rstudio.com>
+
+        * inst/include/r/headers.h: Ensure NORET macro set appropriately
+
+
 2016-07-18  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION: Release 0.12.6
