--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,10 @@
+2016-07-21  Dirk Eddelbuettel  <edd@debian.org>
+
+        * DESCRIPTION (Version): Roll minor release
+
 2016-07-18  Kevin Ushey  <kevin@rstudio.com>
 
-        * inst/NEWS.rd: NEWS entry for NORET macro def'n
-        * inst/include/Rcpp/r/headers.h: Ensure NORET macro set appropriately
-
+        * inst/include/Rcpp/r/headers.h: Ensure NORET macro is set appropriately
 
 2016-07-18  Dirk Eddelbuettel  <edd@debian.org>
 
