Added random number generator unit tests (closes #28)
Adds unit test for random generation for the R:: namespace where Rmath
is kept.

Added section breaks in C++ code for each distribution

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2016-07-22  James J Balamuta  <balamut2@illinois.edu>
+
+        * inst/unitTests/cpp/rmath.cpp: Added unit test functions for Rmath
+        random number generators.
+        * inst/unitTests/runit.rmath.R: idem
+
 2016-07-21  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION (Version): Roll minor release
