--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2016-08-02 Qiang Kou <qkou@umail.iu.edu>
+
+        * inst/include/Rcpp/String.h: CE_UTF8 as default encoding
+        * inst/unitTests/cpp/String.cpp: Update unit test
+        * inst/unitTests/runit.String.R: Idem
+
 2016-08-01 Nathan Russell <russell.nr2012@gmail.com>
 
         * inst/include/Rcpp/vector/Vector.h: Added decreasing option for Vector 
