ChangeLog and NEWS for recents PRs, roll version

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2016-08-04  James J Balamuta  <balamut2@illinois.edu>
+
+        * src/attributes.cpp: Correct variable re-declaration
+
 2016-08-03  Dirk Eddelbuettel  <edd@debian.org>
 
         * .gitattributes: Added to have ChangeLog and NEWS.Rd merge via union
