--- a/vignettes/Rcpp.bib
+++ b/vignettes/Rcpp.bib
@@ -1,6 +1,6 @@
 @String{CRAN = "http://CRAN.R-Project.org/" }
 @String{manuals = CRAN # "doc/manuals/" }
-@String{RCoreTeam = "{R Development Core Team}" }
+@String{RCoreTeam = "{R Core Team}" }
 @String{RFoundation = "R Foundation for Statistical Computing" }
 @String{R-Forge = "http://R-Forge.R-Project.org/" }
 
