--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2016-09-04  Dirk Eddelbuettel  <edd@debian.org>
+
+        * DESCRIPTION: Release 0.12.7
+        * inst/NEWS.Rd: Release 0.12.7
+        * vignettes/Rcpp.bib: Release 0.12.7
+        * inst/include/Rcpp/config.h: Release 0.12.7
+
+        * README.md: Updated counts for dependents and tests
+
+        * debian/*: Changes for Debian release of 0.12.7
+
 2016-09-02  Simon Dirmeier <simon.dirmeier@bsse.ethz.ch>
 
         * src/attributes.cpp: Remove leading underscore in header guard
