two more vignette file types being removed

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,14 @@
+2016-09-05  Dirk Eddelbuettel  <edd@debian.org>
+
+        * DESCRIPTION (Version): Roll minor version
+        * cleanup: Clean two more file type from vignettes/
+
 2016-09-04  Nathan Russell  <russell.nr2012@gmail.com>
 
-        * inst/include/Rcpp/sugar/functions/rowSums.h: New functions 
+        * inst/include/Rcpp/sugar/functions/rowSums.h: New functions
         rowSums(), colSums(), rowMeans(), and colMeans()
         * inst/include/Rcpp/sugar/functions/functions.h: Idem
-        * inst/unitTests/cpp/sugar.cpp: Unit tests for new functions 
+        * inst/unitTests/cpp/sugar.cpp: Unit tests for new functions
         * inst/unitTests/runit.sugar.R: Idem
 
 2016-09-04  Dirk Eddelbuettel  <edd@debian.org>
