first step towards updated Date{time}Vector

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2016-10-16  Dirk Eddelbuettel  <edd@debian.org>
+
+        * inst/include/Rcpp/date_datetime/date_datetime.h: New header file (and
+        directory) regrouping all Date and Datetime headers, scalar and vector
+
+        * inst/include/Rcpp/date_datetime/Date.h: Moved one directory down
+        * inst/include/Rcpp/date_datetime/Datetime.h: Ditto
+        * inst/include/Rcpp/date_datetime/oldDateVector.h: Moved and renamed
+        * inst/include/Rcpp/date_datetime/oldDatetimeVector.h: Ditto
+
+        * inst/include/Rcpp/date_datetime/newDateVector.h: New implementation
+        inheriting from NumericVector, still optional
+        * inst/include/Rcpp/date_datetime/newDatetimeVector.h: Ditto
+
 2016-09-05  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION (Version): Roll minor version
