--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-10-23  Nathan Russell  <russell.nr2012@gmail.com>
+
+        * inst/unitTests/runit.dispatch.R (test.ExpressionVector): Use
+        expression rather than parse, correct typo
+
 2016-10-21  Qiang Kou  <qkou@umail.iu.edu>
 
         * inst/include/Rcpp/barrier.h: Change string_elt/vector_elt to accept R_xlen_t
