--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2016-10-24  Qiang Kou  <qkou@umail.iu.edu>
+
+        * inst/include/Rcpp/sugar/Range.h : fix range sugar ambiguity
+        * inst/unitTests/cpp/sugar.cpp: range sugar unit test
+        * inst/unitTests/runit.sugar.R: range sugar unit test
+
 2016-10-24  Nathan Russell  <russell.nr2012@gmail.com>
 
 	* inst/include/Rcpp/vector/MatrixBase.h: Change sugar 
