--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2016-11-03  Nathan Russell     <russell.nr2012@gmail.com>
+
+        * inst/include/Rcpp/hash/IndexHash.h: Add casts to eliminate 
+        signed / unsigned comparison warning
+        * inst/include/Rcpp/hash/SelfHash.h: Idem
+        * inst/unitTests/cpp/sugar.cpp: Added unit tests for sugar function 
+        unique()
+        * inst/unitTests/runit.sugar.R: Idem
+
 2016-10-30  Dirk Eddelbuettel  <edd@debian.org>
 
         * src/api.cpp: New capabilities field for new date(time) vectors
