--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2016-11-04  Nathan Russell     <russell.nr2012@gmail.com>
+
+        * inst/include/Rcpp/macros/dispatch.h: Modify variadic macros 
+        to not use GNU extensions
+        * DESCRIPTION: roll minor version
+
 2016-11-03  Nathan Russell     <russell.nr2012@gmail.com>
 
         * inst/include/Rcpp/hash/IndexHash.h: Add casts to eliminate 
