--- a/ChangeLog
+++ b/ChangeLog
@@ -1,15 +1,25 @@
+2016-11-10  Dirk Eddelbuettel  <edd@debian.org>
+
+        * inst/include/Rcpp/date_datetime/newDateVector.h: Added constructor
+        using VectorBase<>
+
+2016-01-05  Daniel C. Dillon  <dcdillon@gmail.com>
+
+        * inst/include/Rcpp/date_datetime/newDatetimeVector.h: Added constructor
+        to instantiate newDatetimeVector from VectorBase.
+
 2016-11-04  Nathan Russell     <russell.nr2012@gmail.com>
 
-        * inst/include/Rcpp/macros/dispatch.h: Modify variadic macros 
+        * inst/include/Rcpp/macros/dispatch.h: Modify variadic macros
         to not use GNU extensions
         * DESCRIPTION: roll minor version
 
 2016-11-03  Nathan Russell     <russell.nr2012@gmail.com>
 
-        * inst/include/Rcpp/hash/IndexHash.h: Add casts to eliminate 
+        * inst/include/Rcpp/hash/IndexHash.h: Add casts to eliminate
         signed / unsigned comparison warning
         * inst/include/Rcpp/hash/SelfHash.h: Idem
-        * inst/unitTests/cpp/sugar.cpp: Added unit tests for sugar function 
+        * inst/unitTests/cpp/sugar.cpp: Added unit tests for sugar function
         unique()
         * inst/unitTests/runit.sugar.R: Idem
 
