--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2016-11-13  Daniel C. Dillon   <dcdillon@gmail.com>
+        * inst/include/Rcpp/RNGScope.h: Moved definition of RNGScope
+        to its own file
+        * inst/include/Rcpp.h: Unconditionally included RNGScope.h
+        * inst/include/Rcpp/stats/random/random.h: Removed definition
+        of RNGScope
+        * inst/include/Rcpp/vector/Matrix.h: Protected Matrix op Scalar
+        definitions with #ifndef RCPP_NO_SUGAR
+
 2016-11-04  Nathan Russell     <russell.nr2012@gmail.com>
 
         * inst/include/Rcpp/macros/dispatch.h: Modify variadic macros 
