--- a/ChangeLog
+++ b/ChangeLog
@@ -1,23 +1,32 @@
+2016-11-16  Dirk Eddelbuettel  <edd@debian.org>
+
+        * DESCRIPTION: Release 0.12.8
+        * inst/NEWS.Rd: Release 0.12.8
+        * vignettes/Rcpp.bib: Release 0.12.8
+        * inst/include/Rcpp/config.h: Release 0.12.8
+
+        * README.md: Updated counts for dependents and tests
+
+        * debian/*: Changes for Debian release of 0.12.8
+
+2016-11-15  Dirk Eddelbuettel  <edd@debian.org>
+
+        * DESCRIPTION: Nathan Russell added to Authors
+
+2016-11-14  Jim Hester  <james.f.hester@gmail.com>
+
+        * inst/include/Rcpp/exceptions.h: Improved exception call stack
+        * inst/include/Rcpp/routines.h: Ditto
+        * inst/src/api.cpp: Ditto
+
+        * R/exections.R: Print and format method for stack straces
+
+        * inst/unitTests/runit.exceptions.R: Unit tests
+        * inst/unitTests/cpp/exceptions.cpp: Ditto
+
 2016-11-13  Dirk Eddelbuettel  <edd@debian.org>
 
-        * R/Attributes.R (mergeIntoBuildEnv): Correct 'empty' return 
-2016-11-13  Daniel C. Dillon  <dcdillon@gmail.com>
-        * inst/include/Rcpp/RNGScope.h: Moved definition of RNGScope
-        to its own file
-        * inst/include/Rcpp.h: Unconditionally included RNGScope.h
-        * inst/include/Rcpp/stats/random/random.h: Removed definition
-        of RNGScope
-        * inst/include/Rcpp/vector/Matrix.h: Protected Matrix op Scalar
-        definitions with #ifndef RCPP_NO_SUGAR
-
-        * inst/include/Rcpp/date_datetime/newDateVector.h: Fixed the copy
-        constructor and added assignment operator.
-        * inst/include/Rcpp/date_datetime/newDatetimeVector.h: Fixed the copy
-        constructor and added assignment operator.
-        * inst/unitTests/cpp/dates.cpp: Added assignment operator tests for
-        DatetimeVector and DateVector for both new and old.
-        * inst/unitTests/runit.Date.R: Added assignment operator tests for
-        DatetimeVector and DateVector for both new and old.
+        * R/Attributes.R (mergeIntoBuildEnv): Correct 'empty' return
 
 2016-11-10  Dirk Eddelbuettel  <edd@debian.org>
 
@@ -28,21 +37,14 @@
 
         * inst/include/Rcpp/date_datetime/newDatetimeVector.h: Added constructor
         to instantiate newDatetimeVector from VectorBase.
-2016-11-11  Jim Hester  <james.f.hester@gmail.com>
-        * inst/include/rcpp/exceptions.h: Return stack trace even if no file
-        or line is specified. Fix R calls when using Rcpp_eval.
-        * inst/include/rcpp/routines.h:allow getting a cppstack without specifying a file and line.
-        * src/api.cpp: Add cppstack support for clang.
-        * r/exceptions.r:Add a str method for Rcpp_stack_trace objects.
-        * NAMESPACE: Idem
 
-2016-11-04  Nathan Russell     <russell.nr2012@gmail.com>
+2016-11-04  Nathan Russell  <russell.nr2012@gmail.com>
 
         * inst/include/Rcpp/macros/dispatch.h: Modify variadic macros
         to not use GNU extensions
         * DESCRIPTION: roll minor version
 
-2016-11-03  Nathan Russell     <russell.nr2012@gmail.com>
+2016-11-03  Nathan Russell  <russell.nr2012@gmail.com>
 
         * inst/include/Rcpp/hash/IndexHash.h: Add casts to eliminate
         signed / unsigned comparison warning
@@ -67,13 +69,13 @@
 
 2016-10-24  Nathan Russell  <russell.nr2012@gmail.com>
 
-	* inst/include/Rcpp/vector/MatrixBase.h: Change sugar 
-	functions eye(), ones(), and zeros() into static methods 
-	in MatrixBase 
-	* inst/include/Rcpp/traits/one_type.h: Idem 
-	* inst/include/Rcpp/traits/traits.h: Idem 
+	* inst/include/Rcpp/vector/MatrixBase.h: Change sugar
+	functions eye(), ones(), and zeros() into static methods
+	in MatrixBase
+	* inst/include/Rcpp/traits/one_type.h: Idem
+	* inst/include/Rcpp/traits/traits.h: Idem
 	* inst/unitTests/cpp/Matrix.cpp: Idem
-	* inst/unitTests/runit.Matrix.R: Idem 
+	* inst/unitTests/runit.Matrix.R: Idem
 
 2016-10-24  Qiang Kou  <qkou@umail.iu.edu>
 
