added format() methods for Date and Datetime
rolled dev version in config.h

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,19 @@
+2016-11-27  Dirk Eddelbuettel  <edd@debian.org>
+
+        * inst/include/Rcpp/date_datetime/Date.h (format, operator<<): Added
+        * inst/include/Rcpp/date_datetime/Datetime.h (format, operator<<): Ditto
+
+2016-11-23  Dirk Eddelbuettel  <edd@debian.org>
+
+        * inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Set minor version
+
 2016-11-22  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION (Date, Version): roll minor version
 
         * inst/include/Rcpp/date_datetime/newDatetimeVector.h (Rcpp): Small
         correction concerning timezone attribute to ctor from RTYPE
+
 2016-11-22  Jim Hester  <james.f.hester@gmail.com>
 
         * inst/src/api.cpp: Cleanup to stack message parseing
