--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2016-11-28  Dirk Eddelbuettel  <edd@debian.org>
+
+        * inst/unitTests/cpp/dates.cpp (Date_format, Datetime_format): New tests
+        * inst/unitTests/runit.Date.R (test.Date.formating): Ditto
+        (test.Datetime.formating): Ditto
+
 2016-11-27  Dirk Eddelbuettel  <edd@debian.org>
 
         * inst/include/Rcpp/date_datetime/Date.h (format, operator<<): Added
