--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-12-03  Dirk Eddelbuettel  <edd@debian.org>
+
+        * inst/unitTests/cpp/dates.cpp (Datetime_format): Additional ostream tests
+        * inst/unitTests/runit.Date.R (test.Date.formating): Ditto
+
 2016-11-29  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION (Version, Date): Roll minor version to 0.12.8.2
