more tests, and some #nocov tags

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,15 @@
         * inst/unitTests/cpp/dates.cpp (Datetime_format): Additional ostream tests
         * inst/unitTests/runit.Date.R (test.Date.formating): Ditto
 
+        * inst/unitTests/runit.system.R (test.RcppCxx): New tests
+
+        * R/RcppLdpath.R (canUseCXX0X): Simplified as we can now rely on more
+        modern compilers;  underlying C++ code has not been present for a while
+
+        * R/compilerCheck.R (compilerCheck): Added some #nocov tags
+        * R/unit.tests.R (test, gctortureRUnitTest): Ditto
+        * R/zzz.R (.onLoad): Ditto
+
 2016-11-29  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION (Version, Date): Roll minor version to 0.12.8.2
