--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2016-12-04  Dirk Eddelbuettel  <edd@debian.org>
+
+        * .codecov.yml (comment): Enable more verbose codecov.io reports
+
 2016-12-03  Dirk Eddelbuettel  <edd@debian.org>
 
         * inst/unitTests/cpp/dates.cpp (Datetime_format): Additional ostream tests
