--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-12-12  Dirk Eddelbuettel  <edd@debian.org>
+
+        * inst/include/Rcpp/sugar/functions/sample.h: In case sample.h from the
+        RcppArmadillo extensions was included, skip this file
+
 2016-12-10  Nathan Russell  <russell.nr2012@gmail.com>
 
         * inst/include/Rcpp/sugar/functions/sample.h: New function
