--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2016-12-13  Nathan Russell     <russell.nr2012@gmail.com>
+
+        * inst/include/Rcpp/sugar/functions/sample.h: Use malloc.h instead of 
+        alloca.h when building on Windows
+        * inst/include/Rcpp/date_datetime/Date.h: Include time.h when building 
+        on Windows
+        * inst/include/Rcpp/date_datetime/Datetime.h: Idem
+
 2016-12-12  Dirk Eddelbuettel  <edd@debian.org>
 
         * inst/include/Rcpp/sugar/functions/sample.h: In case sample.h from the
