--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2016-12-26  Dirk Eddelbuettel  <edd@debian.org>
+
+        * R/Module.R: Added #nocov markers
+
 2016-12-25  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION (Date, Version): Roll minor version
