added #nocov markers, ran M-x untabify

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
 2016-12-26  Dirk Eddelbuettel  <edd@debian.org>
 
-        * R/Module.R: Added #nocov markers
-        * R/exposeClass.R: Idem, added copyright header 
+        * R/Attributes.R: Added #nocov markers
+        * R/Module.R: Idem
+        * R/exposeClass.R: Idem, added copyright header
 
 2016-12-25  Dirk Eddelbuettel  <edd@debian.org>
 
