--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2016-12-31  Dirk Eddelbuettel  <edd@debian.org>
+
+        * inst/include/Rcpp/vector/Matrix.h: Minor simplification
+
 2016-12-31  James J Balamuta  <balamut2@illinois.edu>
 
         * inst/include/Rcpp/vector/Matrix.h: Fixed non-symmetric case of matrix
