refined test.Datetime.formatting for Windoze

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,8 +3,8 @@
         * src/Date.cpp (Rcpp): Protect assignment to tm_gmtoff to not being
         under MinGW; could potentially bite other too-limited systems
 
-        * inst/unitTests/runit.Date.R (test.Datetime.formating): Condition one
-        test out if on Windows
+        * inst/unitTests/runit.Date.R (test.Datetime.formating): Do not set TZ
+        when running test, only set digits option
 
 2017-01-01  Dirk Eddelbuettel  <edd@debian.org>
 
