--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-06  Dirk Eddelbuettel  <edd@debian.org>
+
+        * DESCRIPTION (Version, Date): Mark new minor version
+
+        * src/attributes.cpp: Additional nocov tags
+
 2017-01-04  Dirk Eddelbuettel  <edd@debian.org>
 
         * src/Date.cpp (Rcpp): Protect assignment to tm_gmtoff to not being
