--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-07  James J Balamuta  <balamut2@illinois.edu>
+
+        * inst/include/Rcpp/sugar/functions/complex.h: Added Arg() function
+        * inst/unitTests/runit.sugar.R: Added Arg() unit test to complex list
+        * inst/unitTests/cpp/sugar.cpp: Idem
+
 2017-01-06  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION (Version, Date): Mark new minor version
