--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
         * inst/include/Rcpp/api/bones/wrap_extra_steps.h: Idem
         * inst/include/Rcpp/iostream/Rstreambuf.h: Idem
         * inst/include/Rcpp/r_cast.h: Idem
+        * src/Module.cpp: Idem
 
 2017-01-12  Dirk Eddelbuettel  <edd@debian.org>
 
