--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
         * inst/include/Rcpp/exceptions.h: Added more #nocov tags
         * inst/include/Rcpp/api/bones/wrap_extra_steps.h: Idem
         * inst/include/Rcpp/iostream/Rstreambuf.h: Idem
+        * inst/include/Rcpp/traits/named_object.h: Idem
         * inst/include/Rcpp/r_cast.h: Idem
         * src/Module.cpp: Idem
 
