--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-21  James J Balamuta  <balamut2@illinois.edu>
+
+        * inst/include/Rcpp/DataFrame.h: Added alias for column and row size
+        * inst/unitTests/runit.DataFrame.R: Added unit tests for aliases
+        * inst/unitTests/cpp/DataFrame.cpp: Idem
+
 2017-01-17  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION (Version, Date): Roll minor version and Date
