--- a/ChangeLog
+++ b/ChangeLog
@@ -548,7 +548,7 @@
 
 2016-07-10  Nathan Russell <russell.nr2012@gmail.com>
 
-        * inst/include/Rcpp/algorithm.h: Accomdate clang compiler
+        * inst/include/Rcpp/algorithm.h: Accomodate clang compiler
 
 2016-07-03  Dirk Eddelbuettel  <edd@debian.org>
 
