--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2017-01-31  Dirk Eddelbuettel  <edd@debian.org>
+
+        * DESCRIPTION (Date, Version): Roll minor version 
+
+        * inst/include/Rcpp/algorithm.h: Allow algorithm.h to be compiler under
+        Intel's compiler, add copyright header and include guard
+
 2017-01-31  Nathan Russell  <russell.nr2012@gmail.com>
 
         * inst/include/Rcpp/sugar/matrix/upper_tri.h: Inherit from MatrixBase
