--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,15 @@
+2017-02-13  Dirk Eddelbuettel  <edd@debian.org>
+
+        * R/Attributes.R (.plugins[["cpp17"]]): New plugin
+        (.plugins[["cpp1z"]]): Idem
+
+2017-02-04  Daniel C. Dillon  <dcdillon@gmail.com>
+
+        * inst/include/Rcpp/algorithm.h: Improved setup for Intel's icc
+
 2017-01-31  Dirk Eddelbuettel  <edd@debian.org>
 
-        * DESCRIPTION (Date, Version): Roll minor version 
+        * DESCRIPTION (Date, Version): Roll minor version
 
         * inst/include/Rcpp/algorithm.h: Allow algorithm.h to be compiler under
         Intel's compiler, add copyright header and include guard
