--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2017-04-14  James J Balamuta  <balamut2@illinois.edu>
 
+        * inst/include/Rcpp/utils/tinyformat.h: Refreshed tinyformat.h against
+        May 13, 2016 upstream, retained local mods.
+
         * inst/include/Rcpp/Environment.h: Modified formatting of new exception
         messages to be more concise.
         * inst/include/Rcpp/exceptions.h: idem
